--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Andi <span>Syeril</span></a>
+      <a href="#" class="navbar-logo">ANDI <span>SYERIL</span></a>
 
       <div class="navbar-nav">
         <a href="#">Home</a>
