--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
       </div>
     </nav>
 
-    <!-- Navbar End -->
-
     <!-- Hero Section -->
     <section class="hero" id="home">
       <main class="content">
@@ -44,9 +42,7 @@
       </main>
     </section>
 
-    <!-- Hero Section end-->
-
-    <!-- About section -->
+    <!-- About Section -->
     <section id="about" class="about">
       <h2><span>Tentang </span>Saya</h2>
 
@@ -60,16 +56,15 @@
         </div>
       </div>
     </section>
-    <!-- About section end -->
 
-    <!-- Menu Section -->
+    <!-- Skill Section -->
     <section id="menu" class="menu">
       <h2><span>Skill</span> Saya</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique repellendus praesentium dolorum obcaecati odit mollitia!</p>
 
       <div class="row">
         <div class="menu-card">
-          <img src="img/menu/game1.jpg" alt="Java" class="menu-card-img" />
+          <img src="img/menu/game1.jpg" alt="Game" class="menu-card-img" />
           <h3 id="menu-card-title">-Game-</h3>
         </div>
         <div class="menu-card">
@@ -78,7 +73,6 @@
         </div>
       </div>
     </section>
-    <!-- Menu Section end -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
@@ -87,7 +81,7 @@
 
       <div class="row">
         <div class="contact-form">
-          <form action="#" method="post">
+          <form action="#" method="post" onsubmit="sendMessage(event)">
             <div class="input-group">
               <label for="name">Nama</label>
               <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required />
@@ -111,7 +105,6 @@
         </div>
       </div>
     </section>
-    <!-- Contact Section end -->
 
     <!-- Icons -->
     <script>
