--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
 
     <!-- Icons -->
@@ -113,5 +114,14 @@
 
     <!-- Js -->
     <script src="js/script.js"></script>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="social">
+        <a href="https://www.instagram.com/_mr_fatt?igsh=a2s1enFtdWt4a3p4"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/share/19xLqyK3bJ/"><i class="bx bxl-facebook-square"></i></a>
+      </div>
+      <p class="copyright">&copy;Andi Syeril. All rights reserved.</p>
+    </footer>
   </body>
 </html>
