--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
     <!-- Skill Section -->
     <section id="menu" class="menu">
       <h2><span>Skill</span> Saya</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique repellendus praesentium dolorum obcaecati odit mollitia!</p>
-
+      <ul type="square">
+        <li>Game Sense Memahami mekanik, strategi, dan pola dalam permainan untuk pengambilan keputusan yang lebih baik.</li>
+        <li>Programming Menguasai logika pemrograman dan pengembangan perangkat lunak.</li>
+      </ul>
       <div class="row">
         <div class="menu-card">
           <img src="img/menu/game1.jpg" alt="Game" class="menu-card-img" />
