--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">ANDI <span>SYERIL</span></a>
+      <a href="#" class="navbar-logo">BAYU <span>SYERIL</span></a>
 
       <div class="navbar-nav">
         <a href="#">Home</a>
